# LifePrompt

./: .gitignore  DESIGN-light.md  README.md  capacitor.config.json  index.html  package-lock.json  package.json  vite.config.js
plans/: ARCHITECTURE.md  DESIGN.md  PLAN.md  development-plan.md
server/: extractor.js
src/: App.jsx  index.css  main.jsx
src/components/layout/: AppShell.jsx  BottomNav.jsx  PageTransition.jsx  TopBar.jsx
src/components/providers/: ThemeProvider.jsx
src/components/three/: ArticleSatellite.jsx  ConnectionLines.jsx  CoreNode.jsx  DashboardHUD.jsx  KnowledgeGraph.jsx  TagOrbit.jsx  ThreeCanvas.jsx
src/components/ui/: GlassCard.jsx  MarkdownRenderer.jsx  NeonButton.jsx  PillTag.jsx  ThemeToggle.jsx  Toast.jsx
src/hooks/: useAIChat.js  useArticles.js  useTags.js
src/pages/: AIChatPage.jsx  AIConfigPage.jsx  ArticleDetailPage.jsx  ArticleListPage.jsx  CapturePage.jsx  CloudBackupPage.jsx  GlassesInboxPage.jsx  HomePage.jsx  LANBackupPage.jsx  MediaAccountsPage.jsx  MindMapPage.jsx  OnboardingPage.jsx  PublishPage.jsx  SearchPage.jsx  SettingsPage.jsx  ShortcutConfigPage.jsx  StoragePage.jsx  UserProfilePage.jsx
src/services/ai/: claude.js  index.js  kimi.js  openai.js  profileEngine.js  promptTemplates.js  qianwen.js
src/services/capture/: clipboard.js  constants.js  index.js  (+1 more)
src/stores/: useAIStore.js  useArticleStore.js  useSettingsStore.js  useThemeStore.js  useToastStore.js  useUISearchStore.js
src/utils/: animations.js  constants.js  mockData.js
uploadProject/: .gitignore  main.py  pyproject.toml  ws_client_example.py
(+3 files in other folders)
